# gststudio

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Main.qml  README.md  main.cpp
src/lib/: CMakeLists.txt  gstelement.h  gstelementbrowser.cpp  gstelementbrowser.h  gstinspectparser.cpp  gstinspectparser.h  gstpadmodel.cpp  gstpadmodel.h  gstpropertymodel.cpp  gstpropertymodel.h
